Fix crashes when selecting text tool after some actions

It turned to just be a few missing null checks.

BUG:518305


(cherry picked from commit a4350e5c4669da5fb6c720301d9f52f5d7f6280f)

e80a43d0 fix-518305

Co-authored-by: Gregg Jansen van Vuren <gregg.vuren@gmail.com>